--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,18 +9,19 @@ body {
   padding: 10px; }
 
 .header {
-  background-color: #2196F3;
+  background-color: #FFF;
   color: #333; }
 
 .footer {
-  background-color: #2196F3;
+  background-color: #FFF;
   color: #333; }
 
 .App {
   display: block; }
 
 .body {
-  background-color: #FFF; }
+  background-color: #FFF;
+  height: 65vh; }
 
 .container {
   display: flex;
